// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/BlocklyApp/components renders the ActionBar correctly 1`] = `
.c2 {
  border-radius: 10px;
  cursor: pointer;
  float: left;
  font-size: 25px;
  font-weight: bold;
  opacity: auto;
  padding: 10px 40px;
  pointer-events: auto;
  text-decoration: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
}

.c2:active {
  border-bottom: 1px solid;
  -webkit-transform: translate(0,5px);
  -ms-transform: translate(0,5px);
  transform: translate(0,5px);
}

.c1 {
  background-color: #5cb85c;
  border-bottom: 5px solid #1b7c1b;
  color: #fff;
  text-shadow: 0 -2px #1b7c1b;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #e3e3e3;
  border: 1px solid #ddd;
  border-bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 68px;
  width: calc(100% - 2px);
}

.c0 * {
  margin: 0 0 0 10px;
}

<div
  className="c0"
>
  .c1 {
  border-radius: 10px;
  cursor: pointer;
  float: left;
  font-size: 25px;
  font-weight: bold;
  opacity: auto;
  padding: 10px 40px;
  pointer-events: auto;
  text-decoration: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
}

.c1:active {
  border-bottom: 1px solid;
  -webkit-transform: translate(0,5px);
  -ms-transform: translate(0,5px);
  transform: translate(0,5px);
}

.c0 {
  background-color: #5cb85c;
  border-bottom: 5px solid #1b7c1b;
  color: #fff;
  text-shadow: 0 -2px #1b7c1b;
}

<a
    className="c0 c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<img class=\\"emoji\\" draggable=\\"false\\" alt=\\"▶\\" src=\\"https://twemoji.maxcdn.com/2/svg/25b6.svg\\"/> PROBAR",
      }
    }
    disabled={undefined}
    onClick={[Function]}
    type="green"
  />
</div>
`;

exports[`ui/BlocklyApp/components renders the Button correctly 1`] = `
.c1 {
  border-radius: 10px;
  cursor: pointer;
  float: left;
  font-size: 25px;
  font-weight: bold;
  opacity: auto;
  padding: 10px 40px;
  pointer-events: auto;
  text-decoration: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
}

.c1:active {
  border-bottom: 1px solid;
  -webkit-transform: translate(0,5px);
  -ms-transform: translate(0,5px);
  transform: translate(0,5px);
}

.c0 {
  background-color: #d9534f;
  border-bottom: 5px solid #be2f2b;
  color: #fff;
  text-shadow: 0 -2px #be2f2b;
}

<a
  className="c0 c1"
  dangerouslySetInnerHTML={
    Object {
      "__html": "I'm a button",
    }
  }
  disabled={undefined}
  onClick={[Function]}
  type="red"
/>
`;
